0.7.4 (public release):
*** Import BitMaP images and convert it to NCLR,NCGR,NSCR files
*** Header and banner editor
*** WAV to STRM converter
* New methods and functions in IPluginHost interface
* Add new file format in "Open As..." -> Extract FAT (files with offsets at the beggining)
* Add new file format in "Open As..." -> Text
* Fixed problem saving roms without arm9 overlay
* Improved french translation (by Vix33)
* Fixed minor problems.

0.7.3 (Contest release):
* Fixed problem with some SDAT and SWAV files
* Added option to open external files
* Added new format file: Script
* Multilenguage support to SDAT plugin.
* Fixed problem with some palettes
* Added Shift-jis, UTF-7, UTF-32 and ASCII encodings to TXT plugin.
* Added wordwrap option to TXT plugin.

0.7.2 (public release):
* AI IGO DS game plugin support completed!
* LASTWINDOW game support
* Support for reading a NDS file from an console argument
* Fixed problem saving new ROMs
* Fix problem loading some ROMs (problem in FAT section)
* Fixed problem with NBFP and NTFP palettes
* Preferences saved
* Change format file name "Screen" to "Map"
* Improved french translation (by Vix33)
* Play looping option in STRM sound files
* Improved Unicode support in TXT plugin and titles in banner

0.7.1 (public release):
*** Now plugins can change files in the rom
* TXT plugin can change text files.
* SWAV sound files with IMA-ADPCM supported.
* STRM sound files supported.
* Improved NCER files with more than one palette (4bpp)
* Fixed BIN files in KIRBY DRO games
* Fixed 4bpp CHAR and NBFC files
* Add Log export function
* Fixed BGR555 codification
* Fixed problems with strage NCLR files
* Minor problems fixed

0.7.0:
*** Import files and save the new ROM
*** 100% compatibility with MONO
* Add new format file: 'System' (ie: overlays, FAT, FNT...)
* Add support for the game AIIJ
* Add support for SDAT files
* Add support for SWAV sound files
* Add support for SWAR sound files
* Add Zoom feature